CSS/main.css
* {
    margin: 0px 0px 0px 0px;
}

h1 {
    font-family: Arial, Helvetica, sans-serif;
}

#mainDiv {
    position: relative;
    width: 1336px;
    height: 5000px;
    margin-left: auto;
    margin-right: auto;
}

/* Header / Plant overview */
#newMemberDiv {
    position: fixed; 
    left: auto;
    top: 0px;
    width: 8%;
    height: 110px;
    border-bottom: 3px solid rgb(210, 210, 210);
    background-color: white;
}

#circleOverview {
    position: absolute;
    height: 110px;
    width: 84%;
    left: 8%;
    top: 0px;
    border-bottom: 3px solid rgb(210, 210, 210);
    overflow-x: scroll;
    white-space: nowrap;
    background-color: white;
}

#headerDiv {
    position: fixed; 
    left: auto;
    top: 0px;
    width: 1336px;
    height: 110px;
}

.circleDiv {
    position: relative;
    display: inline-block;
}
.headerCircles {
    position: relative;
    display: inline-block;
    left: 10px;
    margin-right: 15px;
    top: 7px;
    width: 75px;
    height: 75px;
    border-radius: 50%;
    border: 2px solid red;
    overflow: hidden;
    
}

.circleTxt {
    position: absolute;
    text-align: center;
    width: 94px;
    height: 18px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
    font-weight: 200;
    top: 90px;
    left: 4px;
    z-index: 1;
    overflow-x: hidden;
    white-space: nowrap;
}


#newMemberC {
    position: relative;
    display: inline-block;
    left: 10px;
    margin-right: 15px;
    top: 8px;
    border: 2px solid #b6b6b6;
    width: 75px;
    height: 75px;
    background-color: #eeeeee;
    border-radius: 50%;
    overflow: hidden;
    cursor: pointer;
}



#plusIco {
    position: absolute;
    top: 16px;
    left: 28px;
    font-size: 30px;
    color: #b6b6b6;
    font-weight: 300;
}

/* My plant */
#myPlantDiv {
    position: absolute;
    display: inline-block;
    width: 8%;
    height: 100%;
    right: 0px;
    left: 92%;
    top: 0px;
    border-bottom: 3px solid rgb(210, 210, 210);
    border-left: 1px solid rgb(210, 210, 210);
    background-color: rgb(244, 244, 244);
}

#myPlantCircle {
    position: absolute;
    top: 6% ;
    margin-left: 12%;
    border: 2px solid #68c959;
    width: 75px;
    height: 75px;
    border-radius: 50%;
    overflow: hidden;
    background-color: white;
}

/* BODY */

#bodyDiv {
    position: absolute;
    width: 1336px;
    height: 1000px;
    margin-top: 113px;
    display: grid;

}

#quoteDiv {
    position: absolute;
    width: 900px;
    height: 30px;
    left: 5px;
    top: 10px;
}
#progressBoard {
    width: 900px;
}

.progressColumns {
    position: absolute;
    margin-top: 60px;
    margin-left: 20px;
    margin-right: 5px;
    width: 265px;
    height: 500px;
    display: inline-block;
    overflow-y: scroll;
    overflow-x: hidden;
    white-space: nowrap;
    color: gray;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 30px;
    font-weight: bold;
    padding-top: 15px;
    border-radius: 10px;
    border-top: 3px solid #c2d8c7; 
    border-left: 3px solid #c2d8c7;
    border-right: 5px solid #99ad9d;
    border-bottom: 5px solid #99ad9d;
    z-index: -2;
}

    /* Feed */
    #feedDiv {
        position: absolute;
        right: 0px;
        top: 175px;
        width: 300px;
        height: 500px;
        background-color: lightgray;
        
    }

